--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,55 +2,55 @@
 
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=1024" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>client-side-apocalypse</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=1024" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <title>client-side-apocalypse</title>
 
-    <meta name="description" content="My Presentera project" />
-    <meta name="author" content="Joe Barnes" />
+  <meta name="description" content="My Presentera project" />
+  <meta name="author" content="Joe Barnes" />
 
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic" rel="stylesheet" />
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic" rel="stylesheet" />
 
 
-    <link href="/css/impress.css" rel="stylesheet" />
+  <link href="/css/impress.css" rel="stylesheet" />
 
-    <link rel="shortcut icon" href="favicon.png" />
-    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+  <link rel="shortcut icon" href="favicon.png" />
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 </head>
 
 <body class="impress-not-supported">
 
 
 <div class="fallback-message">
-    <p>Your browser <b>doesn't support the features required</b> by impress.js, so you are presented with a simplified version of this presentation.</p>
-    <p>For the best experience please use the latest <b>Chrome</b>, <b>Safari</b> or <b>Firefox</b> browser.</p>
+  <p>Your browser <b>doesn't support the features required</b> by impress.js, so you are presented with a simplified version of this presentation.</p>
+  <p>For the best experience please use the latest <b>Chrome</b>, <b>Safari</b> or <b>Firefox</b> browser.</p>
 </div>
 
 <div id="impress">
 
 
-    <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
-        <q>Aren't you just <b>bored</b> with all those slides-based presentations?</q>
-        <q>Follow along at http://<span data-lift="Host">localhost</span>:8080</q>
-    </div>
+  <div id="title" class="step" data-x="-1000" data-y="-1500">
+    <h1>The Client-Side Apocalypse</h1>
+    <h2>Joe Barnes</h2>
+    <h3 id="follow">Follow along at http://<span data-lift="Host">localhost</span></h3>
+    <div>Powered by</div>
+    <img src="images/liftweb-logo-single-small2.png">
+  </div>
 
-
+  <div id="about-me" class="step" data-x="-1000" data-y="-500">
+    <ul class="bulleted">
+      <li>Started Scala in 2012</li>
+      <li>Built PartQuest.com 2014-16</li>
+      <li>Developed lift-ng in parallel</li>
+      <li>Lift committer 2015</li>
+      <li>Currently backend and devops for go90 at AOL</li>
+    </ul>
+  </div>
 
 </div>
 
 <div data-lift="IfAudience"><div data-lift="embed?what=slide-controls"></div></div>
-
-<div data-lift="IfPresenter">
-  <div class="hint">
-      <p>Use a spacebar or arrow keys to navigate</p>
-  </div>
-  <script>
-  if ("ontouchstart" in document.documentElement) {
-      document.querySelector(".hint").innerHTML = "<p>Tap on the left or right to navigate</p>";
-  }
-  </script>
-</div>
 
 <script src="js/highlight.min.js"></script>
 <script src="js/scala.min.js"></script>
