--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,7 +30,7 @@
 <div id="impress">
 
 
-  <div id="title" class="step" data-x="-1000" data-y="-1500">
+  <div id="title" class="step">
     <h1>The Client-Side Apocalypse</h1>
     <h2>Joe Barnes</h2>
     <h3 id="follow">Follow along at http://<span data-lift="Host">localhost</span></h3>
@@ -38,7 +38,7 @@
     <img src="images/liftweb-logo-single-small2.png">
   </div>
 
-  <div id="about-me" class="step" data-x="-1000" data-y="-500">
+  <div id="about-me" class="step" data-y="-1000">
     <ul class="bulleted">
       <li>Started Scala in 2012</li>
       <li>Built PartQuest.com 2014-16</li>
@@ -46,6 +46,34 @@
       <li>Lift committer 2015</li>
       <li>Currently backend and devops for go90 at AOL</li>
     </ul>
+  </div>
+
+  <div id="wikipedia" class="step" data-x="-2000" data-y="-1000">
+    <h1>ἀποκάλυψις</h1>
+    <div>An apocalypse, translated literally from Greek, is</div>
+    <div><i>through the concealed</i></div>
+    <div>meaning a disclosure of knowledge, i.e.,</div>
+    <div>a lifting of the veil or revelation.</div>
+    <div><i>-wikipedia</i></div>
+  </div>
+
+  <div id="what-happens" class="step" data-x="-2000" data-y="-2000">
+    So what happens when we render client-side?
+  </div>
+
+  <div id="initial-request" class="step browser-view" data-x="-4000" data-y="-2000">
+  </div>
+
+  <div class="visible left-arrow" data-x="-5250" data-y="-1500" data-z="-500">
+    <img src="images/arrow.png">
+  </div>
+
+  <div id="html-request" class="step" data-x="-5500" data-y="-1500">
+    <div class="centered">http://youraddress.com</div>
+  </div>
+
+  <div id="html-request-received" class="step" data-x="-7000" data-y="-1000">
+    <img class="centered" src="images/cloud-server.png">
   </div>
 
 </div>
