Through the js response

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -76,6 +76,40 @@
     <img class="centered" src="images/cloud-server.png">
   </div>
 
+  <div class="visible right-arrow" data-x="-5250" data-y="-500" data-z="-500">
+    <img src="images/arrow.png">
+  </div>
+
+  <div id="html-response" class="step" data-x="-5500" data-y="-500">
+    <div class="centered" data-lift="Code?src=/webapp/skeleton.html"></div>
+  </div>
+
+  <div id="first-response" class="step browser-view" data-x="-4000">
+  </div>
+
+  <div class="visible left-arrow" data-x="-5250" data-y="500" data-z="-500">
+    <img src="images/arrow.png">
+  </div>
+
+  <div id="js-request" class="step" data-x="-5500" data-y="500">
+    <div class="centered">important-crap.js</div>
+  </div>
+
+  <div id="js-request-received" class="step" data-x="-7000" data-y="1000">
+    <img class="centered" src="images/cloud-server.png">
+  </div>
+
+  <div class="visible right-arrow" data-x="-5250" data-y="1500" data-z="-500">
+    <img src="images/arrow.png">
+  </div>
+
+  <div id="js-response" class="step" data-x="-5500" data-y="1500">
+    <div class="centered" data-lift="Code?src=/webapp/js/important-crap.js"></div>
+  </div>
+
+  <div id="second-response" class="step browser-view" data-x="-4000" data-y="2000">
+  </div>
+
 </div>
 
 <div data-lift="IfAudience"><div data-lift="embed?what=slide-controls"></div></div>
