Made it to user trust

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -159,21 +159,21 @@
     No big deal, it's 2016 and the internet is fast and reliable
   </div>
 
-  <div id="mbps-and-fiber" class="step centered internet-imgs" data-x="-1000" data-y="5000">
+  <div id="mbps-and-fiber" class="step centered img-row" data-x="-1000" data-y="5000">
     <div>2016 internet</div>
     <img src="images/cloud-server.png">
     <img src="images/google-fiber.jpg">
     <img src="images/mbp.jpg">
   </div>
 
-  <div id="real-internet" class="step centered internet-imgs" data-x="500" data-y="5000">
+  <div id="real-internet" class="step centered img-row" data-x="500" data-y="5000">
     <div>Somewhere IRL, probably</div>
     <img src="images/cloud-server.png">
     <img src="images/wiring.jpg">
     <img src="images/blackberry.png">
   </div>
 
-  <div id="inflight-wifi" class="step centered internet-imgs" data-x="500" data-y="4000">
+  <div id="inflight-wifi" class="step centered img-row" data-x="500" data-y="4000">
     <div>True story</div>
     <img src="images/cloud-server.png">
     <img src="images/inflight-wifi.jpg">
@@ -197,6 +197,7 @@
   <div id="scala-js" class="step img-only centered" data-x="3500" data-y="5500" data-z="500">
     <div>NO ONE!!!</div>
     <img src="images/scala-js.png">
+    <div>Thank you, Sébastien!</div>
   </div>
 
   <div id="transpiling" class="step" data-x="3500" data-y="6500">
@@ -241,6 +242,114 @@
     <div>See <span class="code">&lt;form&gt;</span></div>
   </div>
 
+
+  <!-- Principle of least power -->
+  <div id="three-asset-types" class="step" data-x="-2500" data-y="7000">
+    <div>Three things you can send to define your application:</div>
+    <ul class="bulleted">
+      <li>HTML</li>
+      <li>JavaScript</li>
+      <li>Cascading Style Sheets</li>
+    </ul>
+    <div>How do they compare in terms of capability/power?</div>
+  </div>
+
+  <div id="js-most-powerful" class="step" data-x="-2500" data-y="6000">
+    <div>Clearly JS is the most powerful</div>
+    <div>So that's what we should use, right?</div>
+  </div>
+
+  <div id="no" class="step centered" data-x="-2500" data-y="6500" data-z="1000">
+    <img src="images/no.jpg">
+  </div>
+
+  <div id="runar" class="step img-only centered" data-x="-4000" data-y="7000">
+    <img src="images/runar.jpg">
+  </div>
+
+  <div id="rule-of-least-power" class="step" data-x="-4000" data-y="6000">
+    <div>Rule of Least Power</div>
+    <div><i>[choose] the least powerful language suitable for a given purpose</i></div>
+    <div class="right">- W3C "The Rule of Least Power"</div>
+  </div>
+
+  <div id="only-useful-for" class="step" data-x="-5500" data-y="6000">
+    Client-side rendered apps are only useful for a human with a powerful heat-producing device on a reliable network.
+  </div>
+
+  <div id="applets-and-flash" class="step centered img-row" data-x="-5500" data-y="7000">
+    <div>Kinda like applets and flash!</div>
+    <img src="images/applet.jpg">
+    <img src="images/flash.png">
+  </div>
+
+  <div id="seo" class="step" data-x="-5500" data-y="8000">
+    Other consumers such as search engines can't consume your content
+  </div>
+
+
+
+  <!-- State synchronization -->
+  <div id="client-state" class="step" data-x="-5500" data-y="9000">
+    <div>Do we <i>really</i> want a stateful client??</div>
+    <div>Effectively gives us a distributed system</div>
+  </div>
+
+  <div id="synchrnoization" class="step" data-x="-7000" data-y="9000">
+    <div><i>Synchronizing data in a distributed system is an enormous challenge</i></div>
+    <div class="right">- Rylan Dirksen, 8th Light</div>
+  </div>
+
+  <div id="background" class="step" data-x="-9500" data-y="9000">
+    Anybody here like to update the view and tell the server in the background?
+  </div>
+
+  <div id="what-if-it-fails" class="step" data-x="-7000" data-y="8000">
+    What if that fails?
+  </div>
+
+  <div id="non-tech-user" class="step" data-x="-9500" data-y="8000">
+    <div>And your user isn't tech savvy</div>
+    <div>And they're using AOL dialup?</div>
+  </div>
+
+  <div id="gun-cleaner" class="step" data-x="-9500" data-y="7000">
+    <div>And they're ordering THIS!</div>
+    <img src="images/gun-cleaning.png">
+  </div>
+
+  <div id="insistence" class="step centered" data-x="-7000" data-y="6000">
+    <div>And you <i>insist</i> you put it in the cart</div>
+    <img src="images/shopping-cart.png">
+  </div>
+
+  <div id="empty" class="step centered" data-x="-7000" data-y="5000">
+    <div>Upon searching for something else, the cart is empty!</div>
+    <img src="images/empty-cart.png">
+  </div>
+
+  <div id="think" class="step" data-x="-9500" data-y="6000">
+    Now what do you expect this user to think?
+  </div>
+
+  <div id="bitch" class="step centered" data-x="-9500" data-y="5000">
+    <div>BITCH SNATCHED IT FROM MY BUGGY!!!</div>
+    <img src="images/fight.gif">
+  </div>
+
+  <div id="armed" class="step" data-x="-9500" data-y="4000">
+    Oh and she was buying a gun cleaning kit...
+  </div>
+
+
+  <!-- User trust -->
+  <div id="facebook" class="step" data-x="-11000" data-y="3000">
+    What if instead of depending on facebook to teach the world to not trust web apps...
+  </div>
+
+  <div id="trustworthy" class="step" data-x="-13500" data-y="3000">
+    ...we built trust worthy apps?
+  </div>
 
 </div>
 
