Adding credit for the web complexity diagram

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -465,6 +465,7 @@
     <div>Crazy wiring: Google Images found it in https://www.reddit.com/r/news/comments/47udya/after_man_built_dozens_of_tiny_houses_for_the/</div>
     <div>Flight wifi: http://arstechnica.com/business/2011/06/in-flight-internet-the-view-from-35000-feet-and-three-years/</div>
     <div>Blackberry: http://us.blackberry.com/software.html</div>
+    <div>Client-side complexity was tweeted by @sstephenson</div>
     <div>Runar: Google Images found it in https://www.youtube.com/watch?v=GqmsQeSzMdw</div>
     <div>Michael Scott NO!: https://memegenerator.net/instance/37308948</div>
     <div>Earth on fire: http://1888.org/images/2012/09/21/9028/fire-on-earth.jpg</div>
