Minor slide tweaks

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -225,13 +225,13 @@
   <div id="progressive-enhancement" class="step" data-x="500" data-y="8000">
     <div>Progressive enhancement</div>
     <ul class="bulleted">
-      <li>The page *just works*</li>
+      <li>The HTML alone *just works*</li>
       <li>If other capabilities are available, it works better</li>
     </ul>
   </div>
 
   <div id="did-you-know1" class="step" data-x="-1000" data-y="8000">
-    <div>Did you know...</div>
+    <div>For instance... did you know...</div>
     <div>a browser can redirect without javascript?</div>
     <div>See <span class="code">&lt;a href="(url)"&gt;</span></div>
   </div>
@@ -284,7 +284,7 @@
   </div>
 
   <div id="seo" class="step" data-x="-5500" data-y="8000">
-    Other consumers such as search engines can't consume your content
+    Other consumers such as search engines, blog readers, etc. can't readily consume your content
   </div>
 
 
