Typos corrected after review with Ryan

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -383,7 +383,7 @@
 
   <div id="on-your-own" class="step" data-x="-22000" data-y="12000">
     <div>Excellent support for both ajax and async pushes...</div>
-    <div>...but you're own your own to maniuplate the DOM</div>
+    <div>...but you're on your own to manipulate the DOM</div>
   </div>
 
   <div id="lift-ng" class="step" data-x="-27000" data-y="12000">
