--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,7 +37,7 @@
     <h3 id="follow">Follow along at http://<span data-lift="Host">localhost</span></h3>
     <div>Powered by</div>
     <img src="images/liftweb-logo-single-small2.png">
-    <img class="right aol-platforms" src="images/AOLP_logo_forBlk.png">
+    <img class="right aol-platforms" src="images/Aol.png">
   </div>
 
   <div id="about-me" class="step" data-y="-2000">
