Adding twitter handle to help page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -461,6 +461,7 @@
 
   <div id="help" class="step" data-x="-22000" data-y="14000" data-z="2000">
     <div>Ways to help:</div>
+    <div>Holla!<a href="https://twitter.com/joescii">@joescii</a></div>
     <div><a href="https://groups.google.com/forum/#!topic/liftweb/2B2fzK1touc">Discuss the idea</a></div>
     <div><a href="https://github.com/lift/framework/tree/joe-vdom">Play with the code</a></div>
     <div><a href="https://github.com/joescii/lift-vdom-chat">Play with the sample application</a></div>
